--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+    box-sizing: border-box;
+}
+
 @keyframes color-change {
     0% {
         color: goldenrod;
@@ -29,9 +33,8 @@
 
 body {
     background-color: black;
-    width: 800px;
     margin: 0 auto;
-    font-family: 'Cinzel', serif;
+    font-family: 'Comfortaa', sans-serif;
     font-weight: 200;
     animation: fade-screen-in 500ms ease-in;
 }
@@ -44,9 +47,7 @@ h1 {
     font-weight: 500;
     padding: 0;
     animation: color-change 4s infinite alternate;
-}
-
-.grant {
+    font-family: 'Syncopate', sans-serif;
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
@@ -54,10 +55,24 @@ h1 {
     align-items: center;
     flex-flow: row;
     align-content: flex-start;
-    overflow-y: scroll;
     font-family: 'Syncopate', sans-serif;
     width: 100%;
     font-size: 90px;
+    flex-shrink: 1;
+}
+
+.name {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row;
+    align-content: flex-start;
+    font-family: 'Syncopate', sans-serif;
+    width: 100%;
+    font-size: 90px;
+    flex-shrink: 1;
 }
 
 h2 a {
@@ -65,6 +80,7 @@ h2 a {
     font-size: 30px;
     text-align: center;
     color: white;
+    font-family: 'Cinzel', serif;
 }
 
 h2 a:hover {
@@ -146,6 +162,7 @@ p {
     padding-right: 10px;
 }
 
+
 nav {
     color: white;
     background-color: goldenrod;
@@ -156,15 +173,20 @@ nav {
     right: 0;
     position: fixed;
     display: flex;
+    flex-wrap: wrap;
+    align-items: center;
+    font-family: 'Cinzel', serif;
 }
 
 nav a {
     text-decoration: none;
     text-transform: uppercase;
     text-align: center;
-    display: flex;
     color: white;
     cursor: pointer;
+    display: block;
+    width: 100%;
+    padding: 15px;
 }
 
 nav a:hover {
@@ -177,21 +199,23 @@ nav a.active {
     background-color: black;
 }
 
-ul {
+nav ul {
     list-style: none;
     text-align: center;
-    display: inline-block;
     margin: 0 auto;
     text-decoration: none;
-    padding-top: 15px;
+    display: flex;
+    justify-content: center;
 }
 
-li {
+nav li {
     list-style: none;
     text-align: center;
-    display: inline-block;
     margin: 0 auto;
     text-decoration: none;
+    display: flex;
+    justify-content: center;
+    padding: 20px;
 }
 
 
@@ -200,9 +224,12 @@ li {
     border: 5px solid white;
     border-radius: 50%;
     background-color: goldenrod;
-    margin-left: 345px;
-    margin-bottom: 400px;
     cursor: pointer;
+    margin-right: 5px;
+}
+.github:hover {
+    background-color: white;
+    border: 5px solid goldenrod;
 }
 
 .linkedin {
@@ -210,8 +237,23 @@ li {
     border: 5px solid white;
     border-radius: 50%;
     background-color: goldenrod;
-    margin-bottom: 400px;
     cursor: pointer;
+    margin-left: 5px;
+}
+
+.linkedin:hover {
+    background-color: white;
+    border: 5px solid goldenrod;
+}
+
+.social-media-icons {
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    flex-flow: row;
+    align-content: flex-start;
 }
 
 #grant {
@@ -219,4 +261,28 @@ li {
     border: 5px solid goldenrod;
     border-radius: 10%;
     float: left;
+}
+
+@media only screen and (max-width: 540px) {
+    nav li {
+        list-style: none;
+        text-align: center;
+        margin: 0 auto;
+        text-decoration: none;
+        display: flex;
+        justify-content: center;
+        padding: 10px;
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    nav li {
+        list-style: none;
+        text-align: left;
+        margin: 0 auto;
+        text-decoration: none;
+        display: flex;
+        justify-content: flex-start;
+        padding: 0px;
+    }
 }
