fixed h1 so it stays on screen

--- a/style.css
+++ b/style.css
@@ -40,7 +40,6 @@ body {
 }
 
 h1 {
-    font-size: 100px;
     color: goldenrod;
     text-align: center;
     margin-top: 230px;
@@ -273,6 +272,9 @@ nav li {
         justify-content: center;
         padding: 10px;
     }
+    h1 {
+        font-size: 75px;
+    }
 }
 
 @media only screen and (max-width: 450px) {
@@ -284,5 +286,8 @@ nav li {
         display: flex;
         justify-content: flex-start;
         padding: 0px;
+    }
+    h1 {
+        font-size: 55px;
     }
 }
