--- a/style.css
+++ b/style.css
@@ -148,6 +148,7 @@ p {
     color: white;
     text-align: justify;
     padding: 10px;
+    line-height: 1.5;
     margin: 10px 50px 10px 50px;
 }
 
